--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Tree-Object
 
-0.01    2016-03-24 (PERLANCAR) (unreleased)
+0.01    2016-03-24 (PERLANCAR)
 
         - First release.
