--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Tree-Object
 
+0.02    2016-03-24 (PERLANCAR)
+
+	- No functional changes.
+
+	- [doc] Mention some other tree modules on CPAN.
+
+
 0.01    2016-03-24 (PERLANCAR)
 
         - First release.
