--- a/Changes
+++ b/Changes
@@ -1,5 +1,24 @@
 Revision history for Tree-Object
 
+0.03    2016-03-26 (PERLANCAR)
+
+        - This distribution now includes more than one implementation of tree
+          objects.
+
+        - [Incompatible change] Rename module Tree::Object to
+          Tree::Object::Hash. Parent and children are now stored in '_parent'
+          and '_children' keys respectively instead of 'parent' and 'children',
+          to denote that they are internal and to reduce chance of clash. To set
+          children, an arrayref must now be passed to children() instead of
+          list. This is because passing a list to set an arrayref attribute is
+          incompatible with accessor generators.
+
+        - The main module Tree::Object now becomes empty and contains just a
+          link to all the available implementations.
+
+        - Add Tree::Object::Array.
+
+
 0.02    2016-03-24 (PERLANCAR)
 
 	- No functional changes.
