--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Tree-Object
 
+0.04    2016-03-29 (PERLANCAR)
+
+	- [dist] Add missing dep to Class::Build::Array::Glob [RT#113409].
+
+
 0.03    2016-03-26 (PERLANCAR)
 
         - This distribution now includes more than one implementation of tree
