--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Tree-Object
 
+0.05    2016-03-29 (PERLANCAR)
+
+        - [Incompatible change] Tree::Object::Array now uses
+          Class::Accessor::Array instead of Class::Build::Array::Glob (object
+          storage layout changed).
+
+        - Add Tree::Object::Array::Glob which uses Class::Accessor::Array::Glob
+          which uses the same object storage layout like the old
+          Tree::Object::Array.
+
+
 0.04    2016-03-29 (PERLANCAR)
 
 	- [dist] Add missing dep to Class::Build::Array::Glob [RT#113409].
