--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Tree-Object
 
+0.07    2016-04-14 (PERLANCAR)
+
+	- Add Tree::Object::InsideOut.
+
+
 0.06    2016-03-30 (PERLANCAR)
 
 	- Add class: TO:Hash::ChildrenAsList.
